# df-sound

./: README.md  meson.build  meson_options.txt
files/: config.service  policy.xml  sound.yml
files/prod/: sounds.lst
files/sounds/: dev.lst
include/: bus.h  common.h  config.h  config_schema.h  dbus.h  download.h  download_manager.h  formats.h  keypad.h  mixer.h  sound.h  view.h  view_history.h  view_manager.h
include/controls/: control_grid.h
include/libs/: animation.h  animations.h  easing.h  spring_animation.h  timed_animation.h
include/models/: mdl_doorbell.h  mdl_download.h  mdl_unit.h
include/views/: view_call.h  view_call_confirm.h  view_connecting.h  view_information.h  view_main.h  view_menu.h  view_pin.h  view_scan.h  view_unit.h
libs/libcyaml/include/cyaml/: cyaml.h
src/: app.c  app.h.in  bus.c  cairo_blur.c  common.c  config.c  dbus.c  download.c  download_manager.c  keypad.c  mixer.c  resources.xml  sound.c  view.c  view_history.c  view_manager.c
src/controls/: control_grid.c
src/libs/: animation.c  easing.c  spring_animation.c  timed_animation.c
src/models/: mdl_doorbell.c  mdl_download.c  mdl_unit.c
src/ui/: call.glade  call_confirm.glade  connecting.glade  information.glade  main.glade  menu.glade  pin.glade  scan.glade  unit.glade  window.css
src/views/: view_call.c  view_call_confirm.c  view_connecting.c  view_information.c  view_main.c  view_menu.c  view_pin.c  view_scan.c  view_unit.c
